<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">email address</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="email_address_hint">example@domain.com</string>
    <string name="password_hint">complex password</string>
    <string name="welcome_message">Welcome again!!</string>
    <string name="let_s_go_to_the_instructions_page">Let\'s go to the instructions page...</string>
    <string name="go_to_instructions_page">Go to instructions page</string>
    <string name="actionbtn">actionBtn</string>
    <string name="please_follow_the_instructions_before_continuing_to_the_next_page">Please, follow the instructions before continuing to the next page.</string>
    <string name="open_show_list">Open show list</string>
    <string name="log_out">Log out</string>
    <string name="title">Title</string>
    <string name="chose_a_valid_title">Chose a valid title</string>
    <string name="name">Name</string>
    <string name="chose_a_valid_name">Chose a valid name</string>
    <string name="company_name">Company name</string>
    <string name="write_the_company_name">Write the company name</string>
    <string name="write_a_valid_show_size">Write a valid show size</string>
    <string name="description">Description</string>
    <string name="size">Size</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="shoeSizeFormat">%s</string>
    <string name="sizeFormat">Size: %s</string>
</resources>
