<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/name_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="200dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <EditText
                        android:id="@+id/name_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="64dp"
                        android:layout_marginTop="5dp"
                        android:ems="15"
                        android:hint="@string/chose_a_valid_name"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:text="@={shoe.name}"
                        android:textColorHint="#546E7A" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/company_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:maxWidth="200dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_area">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/company_name"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <EditText
                        android:id="@+id/company_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="64dp"
                        android:layout_marginTop="5dp"
                        android:ems="15"
                        android:hint="@string/write_the_company_name"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:text="@={shoe.company}"
                        android:textColorHint="#546E7A" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/size_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:maxWidth="200dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/company_area">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/size"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <EditText
                        android:id="@+id/size_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="64dp"
                        android:layout_marginTop="5dp"
                        android:ems="15"
                        android:hint="@string/write_a_valid_show_size"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
                        android:text="@={`` + shoe.size}"
                        android:textColorHint="#546E7A"
                        tools:ignore="DuplicateSpeakableTextCheck" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/description_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:maxWidth="200dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/size_area">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <EditText
                        android:id="@+id/description_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:ems="15"
                        android:gravity="top"
                        android:hint="@string/write_a_valid_show_size"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:lines="3"
                        android:minHeight="48dp"
                        android:text="@={shoe.description}"
                        android:textColorHint="#546E7A" />

                </LinearLayout>

                <Button
                    android:id="@+id/save_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:ems="18"
                    android:importantForAutofill="no"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description_area" />

                <Button
                    android:id="@+id/cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/white"
                    android:ems="18"
                    android:importantForAutofill="no"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/save_btn" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>