<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/email_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="200dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/email_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_address"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <EditText
                        android:id="@+id/email_address"
                        android:layout_width="wrap_content"
                        android:layout_height="64dp"
                        android:layout_marginTop="5dp"
                        android:ems="15"
                        android:hint="@string/email_address_hint"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:textColorHint="#546E7A" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/password_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:maxWidth="200dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email_area">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="wrap_content"
                        android:layout_height="64dp"
                        android:layout_marginTop="5dp"
                        android:ems="15"
                        android:hint="@string/password_hint"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:textColorHint="#546E7A" />

                </LinearLayout>

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:ems="18"
                    android:importantForAutofill="no"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password_area" />

                <Button
                    android:id="@+id/create_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/white"
                    android:ems="18"
                    android:importantForAutofill="no"
                    android:text="@string/create_a_new_account"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_btn" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>